--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_PATH=. nodemon src/server/index.js",
+    "dev": "NODE_PATH=. nodemon src/server/index.js --exec babel-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ismael Ramos Merlos",
   "license": "MIT",
   "devDependencies": {
+    "express": "^4.16.2",
     "nodemon": "^1.12.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "expressjs": "^1.0.1",
+    "save-dev": "^2.0.0"
+  }
 }
