--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "nodemon": "^1.12.1"
   },
   "dependencies": {
+    "atpl": "^0.9.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "config": "^1.28.1",
     "expressjs": "^1.0.1",
     "save-dev": "^2.0.0"
   }
