--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "author": "Ismael Ramos Merlos",
   "license": "MIT",
   "devDependencies": {
+    "babel-loader": "^7.1.2",
+    "clean-webpack-plugin": "^0.1.17",
     "express": "^4.16.2",
-    "nodemon": "^1.12.1"
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^2.30.1",
+    "nodemon": "^1.12.1",
+    "webpack": "^3.8.1",
+    "webpack-merge": "^4.1.1"
   },
   "dependencies": {
     "atpl": "^0.9.3",
@@ -19,9 +25,12 @@
     "babel-core": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "config": "^1.28.1",
     "expressjs": "^1.0.1",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
     "save-dev": "^2.0.0"
   }
 }
