--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "devDependencies": {
     "babel-loader": "^7.1.2",
     "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "nodemon": "^1.12.1",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
     "webpack-merge": "^4.1.1"
   },
@@ -30,6 +32,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "config": "^1.28.1",
     "expressjs": "^1.0.1",
+    "randomstring": "^1.1.5",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "save-dev": "^2.0.0"
