--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_PATH=. nodemon src/server/index.js --exec babel-node",
+    "build": "babel -d ./build ./src/server -s",
+    "start": "npm run build && node ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ismael Ramos Merlos",
